[incubator-kie-issues#1150] Improve Import Resolver error messages to be more user friendly (#6014)
* Improved Error Messages + Logs

* dependabot.yml fixed

* dependabot.yml fixed

* Change Request

* Minor change

* Tests fixed